# tbbpy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: DownloadDependencies.cmake
examples/: tbb-python.cpp
